--- a/misc/Jenkinsfile
+++ b/misc/Jenkinsfile
@@ -12,7 +12,7 @@ node {
      }
    }
    stage('docker build/push') {
-     docker.withRegistry('https://hub.docker.com/', 'dockerhub') {
+     docker.withRegistry('https://registry.hub.docker.com/', 'dockerhub') {
        def app = docker.build("tseringnamgyal/docker-nodejs-demo:${commit_id}", '.').push()
      }
    }
