--- a/misc/Jenkinsfile
+++ b/misc/Jenkinsfile
@@ -12,8 +12,10 @@ node {
      }
    }
    stage('docker build/push') {
-     docker.withRegistry('https://registry.hub.docker.com/', 'dockerhub') {
-       def app = docker.build("tseringnamgyal/docker-nodejs-demo:${commit_id}", '.').push()
+    steps {
+        withCredentials([usernamePassword(credentialsId: 'dockerHub', passwordVariable: 'dockerHubPassword', usernameVariable: 'dockerHubUser')]) {
+          sh "docker login -u ${env.dockerHubUser} -p ${env.dockerHubPassword}"
+          sh 'docker push tseringnamgyal/docker-nodejs-demo'
      }
    }
 }
