--- a/misc/Jenkinsfile
+++ b/misc/Jenkinsfile
@@ -12,6 +12,7 @@ node {
      }
    }
    stage('docker build/push') {
+      agent any
     steps {
         withCredentials([usernamePassword(credentialsId: 'dockerHub', passwordVariable: 'dockerHubPassword', usernameVariable: 'dockerHubUser')]) {
           sh "docker login -u ${env.dockerHubUser} -p ${env.dockerHubPassword}"
