--- a/misc/Jenkinsfile
+++ b/misc/Jenkinsfile
@@ -14,7 +14,7 @@ node {
    stage('docker build/push') {
     agent any
     steps {
-        withCredentials([usernamePassword(credentialsId: 'dockerHub', passwordVariable: 'dockerHubPassword', usernameVariable: 'dockerHubUser')]) {
+        withCredentials([usernamePassword(credentialsId: 'dockerhub', passwordVariable: 'dockerHubPassword', usernameVariable: 'dockerHubUser')]) {
           sh "docker login -u ${env.dockerHubUser} -p ${env.dockerHubPassword}"
           sh 'docker push tseringnamgyal/docker-nodejs-demo'
      }
