--- a/misc/Jenkinsfile
+++ b/misc/Jenkinsfile
@@ -1,5 +1,9 @@
 node {
    def commit_id
+   environment {
+     registry = "tseringnamgyal/docker-nodejs-demo"
+     registryCredential = 'dockerhub'
+  }
    stage('Preparation') {
      checkout scm
      sh "git rev-parse --short HEAD > .git/commit-id"                        
@@ -13,11 +17,12 @@ node {
    }
    stage('docker build/push') {
     agent any
-    steps {
-        withCredentials([usernamePassword(credentialsId: 'dockerhub', passwordVariable: 'dockerHubPassword', usernameVariable: 'dockerHubUser')]) {
-          sh "docker login -u ${env.dockerHubUser} -p ${env.dockerHubPassword}"
-          sh 'docker push tseringnamgyal/docker-nodejs-demo'
+     stage('Building image') {
+     steps{
+        script {
+          docker.build registry + ":$BUILD_NUMBER"
+      }
      }
-    }
-  } 
+   } 
+ }
 }
