--- a/misc/Jenkinsfile
+++ b/misc/Jenkinsfile
@@ -15,14 +15,9 @@ node {
        sh 'npm test'
      }
    }
-   stage('docker build/push') {
-    agent any
-     stage('Building image') {
-     steps{
-        script {
-          docker.build registry + ":$BUILD_NUMBER"
-      }
+    stage('docker build/push') {
+     docker.withRegistry('https://index.docker.io/v1/', 'dockerhub') {
+       def app = docker.build("tseringnamgyal/docker-nodejs-demo:${commit_id}", '.').push()
      }
-   } 
- }
+   }
 }
