--- a/misc/Jenkinsfile
+++ b/misc/Jenkinsfile
@@ -16,7 +16,7 @@ node {
      }
    }
     stage('docker build/push') {
-     docker.withRegistry('https://index.docker.io/tseringnamgyal/docker-nodejs-demo/', 'dockerhub') {
+     docker.withRegistry('https://index.docker.io', 'dockerhub') {
        def app = docker.build("tseringnamgyal/docker-nodejs-demo:${commit_id}", '.').push()
      }
    }
